# Nizhny-Novgorod-State-University

./: README.md  main (3).c  Отчет.doc
Fifth LAB/: CMakeLists.txt  Line.h  Point.h  SetOfShapes.h  Square.h  TObj.h  Tetrahedron.h  Triangle.h  Vector.h  main.cpp
First LAB/: Animals.cpp  Animals.h  CMakeLists.txt  Cat.cpp  Cat.h  ColdAnimals.cpp  ColdAnimals.h  Dog.cpp  Dog.h  Frog.cpp  MilckAnimals.cpp  MilckAnimals.h  SetOfAnimals.cpp  SetOfAnimals.h  Snake.cpp  Snake.h  frog.h  main.cpp
Fourth LAB/: CMakeLists.txt  MyMatrix.h  MyVector.h  main.cpp  Отчет.docx
Fourth LAB/vector/: CMakeLists.txt  main.cpp
Fourth LAB/vectorLib/: MyMatrix.h  MyVector.h
Second LAB/: CMakeLists.txt  Complex.cpp  Complex.h  main.cpp
SecondLab/: code.html  code2.html  input.txt  main  main.c  support  support.c  Отчет.doc
Third LAB/: CMakeLists.txt  MyString.cpp  MyString.h  main.cpp
